:sparkles: getUserを追加
